# comics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  event.hpp  foo.hpp  main.cpp
app/: CMakeLists.txt  DataControler.cpp  DbConnection.cpp  issueInfo.cpp  issueInfo.hpp  issueModel.cpp  issueModel.hpp  main.cpp  mymodel.cpp  mymodel.hpp
src/: CMakeLists.txt  DbConnection.hpp  issueInfo.cpp  issueInfo.hpp  main.cpp  mymodel.cpp  mymodel.hpp
test/: test.cpp
tests/: CMakeLists.txt  testIssueInfo.cpp
ui/: MainWindow.ui
